tabs and column added

--- a/src/app/components/form-structure/form-structure.component.html
+++ b/src/app/components/form-structure/form-structure.component.html
@@ -1,75 +1,103 @@
-<!-- 🔹 Xintra Card Wrapper -->
+<!-- Xintra Card Wrapper -->
 <div class="card border border-defaultborder rounded-xl shadow-sm bg-white dark:bg-bodybg p-4 builder-container">
   <div class="card-header flex flex-wrap items-center justify-between gap-3 px-2 py-3 border-b border-defaultborder">
     <h2 class="text-base font-semibold text-defaulttextcolor">Form Builder</h2>
 
-    <!-- 🧩 Field Buttons -->
-    <!-- 🧩 Field Palette (Drag Source) -->
-<div
-  class="flex gap-2"
-  cdkDropList
-  id="fieldPalette"
-  [cdkDropListData]="availableFields"
-  [cdkDropListConnectedTo]="['canvasZone']"
->
-  <div
-    *ngFor="let field of availableFields"
-    class="btn btn-outline-primary btn-sm select-none"
-    cdkDrag
-    [cdkDragData]="field"
-  >
-    {{ field.label }}
-  </div>
-</div>
-
+    <!-- Field Palette -->
+    <div
+      class="flex gap-2"
+      cdkDropList
+      id="fieldPalette"
+      [cdkDropListData]="availableFields"
+      [cdkDropListConnectedTo]="paletteConnections"
+    >
+      <div
+        *ngFor="let field of availableFields"
+        class="btn btn-outline-primary btn-sm select-none"
+        cdkDrag
+        [cdkDragData]="field"
+      >
+        {{ field.label }}
+      </div>
+    </div>
 
     <button class="btn btn-outline-danger btn-sm" type="button" (click)="clearCanvas()">Clear Canvas</button>
   </div>
 
   <div class="card-body p-4">
-    <!-- 🔸 Canvas Area (Now reorderable) -->
     <div
-  class="canvas border border-defaultborder rounded-lg p-4 bg-bodybg2 dark:bg-bodybg"
-  cdkDropList
-  id="canvasZone"
-  [cdkDropListData]="droppedFields"
-  [cdkDropListConnectedTo]="['fieldPalette']"
-  (cdkDropListDropped)="onDrop($event)"
->
-
-      <!-- <h3 class="text-sm font-semibold text-defaulttextcolor mb-3">Canvas Area</h3> -->
-
+      class="canvas border border-defaultborder rounded-lg p-4 bg-bodybg2 dark:bg-bodybg"
+      cdkDropList
+      id="canvasZone"
+      [cdkDropListData]="droppedFields"
+      [cdkDropListConnectedTo]="canvasConnections"
+      (cdkDropListDropped)="onDrop($event)"
+    >
       <div *ngIf="!droppedFields.length" class="italic text-mutedtextcolor">
         No fields added yet. Click a field type above to add one.
       </div>
 
-      <!-- 🔹 Each field can be reordered -->
       <div
         *ngFor="let field of droppedFields; let i = index"
-        class="canvas-field relative mb-4 border border-defaultborder rounded-md p-3 bg-gray-50 dark:bg-bodybg2 shadow-sm cursor-move"
+        class="canvas-field relative mb-4 border border-defaultborder rounded-md p-3 bg-gray-50 dark:bg-bodybg2 shadow-sm"
         cdkDrag
       >
-        <!-- 🗑️ Delete Button -->
-        <button
-          type="button"
-          class="absolute top-2 right-2 text-xs text-white bg-red-500 hover:bg-red-600 rounded-full w-5 h-5 flex items-center justify-center"
-          (click)="deleteField(i)"
-        >
-          ×
-        </button>
-        <label class="block text-sm font-medium mb-2 text-defaulttextcolor">
-          {{ field.label }}
-        </label>
+        <div class="field-toolbar flex items-center justify-between mb-3">
+          <span class="text-[11px] uppercase tracking-wide text-defaulttextcolor">{{ field.label }}</span>
+          <button
+            type="button"
+            class="text-xs text-white bg-red-500 hover:bg-red-600 rounded-full w-5 h-5 flex items-center justify-center"
+            (click)="deleteField(i)"
+          >&times;</button>
+        </div>
 
         <ng-container [ngSwitch]="field.type">
-          <input *ngSwitchCase="'text'" type="text" placeholder="Enter text" class="form-input w-full" />
-          <select *ngSwitchCase="'dropdown'" class="form-select w-full">
-            <option *ngFor="let opt of field.options">{{ opt }}</option>
-          </select>
-          <div *ngSwitchCase="'checkbox'" class="flex items-center gap-2">
-            <input type="checkbox" class="form-checkbox" />
-            <span>Check me</span>
-          </div>
+          <ng-container *ngSwitchCase="'text'">
+            <input type="text" placeholder="Enter text" class="form-input w-full" />
+          </ng-container>
+
+          <ng-container *ngSwitchCase="'dropdown'">
+            <select class="form-select w-full">
+              <option *ngFor="let opt of field.options">{{ opt }}</option>
+            </select>
+          </ng-container>
+
+          <ng-container *ngSwitchCase="'checkbox'">
+            <div class="flex items-center gap-2">
+              <input type="checkbox" class="form-checkbox" />
+              <span>Check me</span>
+            </div>
+          </ng-container>
+
+          <ng-container *ngSwitchCase="'tabs'">
+            <ng-container *ngIf="asTabs(field) as tabsField">
+              <app-tabs
+                [tabsField]="tabsField"
+                [fieldIndex]="i"
+                [connectedTargets]="collectDropListIds()"
+                (addTab)="onAddTab($event)"
+                (deleteTab)="onDeleteTab($event)"
+                (updateTabTitle)="onUpdateTabTitle($event)"
+                (setActiveTab)="onSetActiveTab($event)"
+                (deleteNestedField)="onDeleteNestedField($event)"
+                (dropOnTab)="dropOnTab($event)"
+              ></app-tabs>
+            </ng-container>
+          </ng-container>
+
+          <ng-container *ngSwitchCase="'columns'">
+            <ng-container *ngIf="asColumns(field) as columnsField">
+              <app-columns
+                [columnsField]="columnsField"
+                [fieldIndex]="i"
+                [connectedTargets]="collectDropListIds()"
+                (dropOnColumn)="dropOnColumn($event)"
+                (deleteColumnField)="onDeleteColumnField($event)"
+                (columnDragEntered)="onColumnDragEntered($event)"
+                (columnDragExited)="onColumnDragExited($event)"
+              ></app-columns>
+            </ng-container>
+          </ng-container>
         </ng-container>
       </div>
     </div>
