drap and drop bug fixed

--- a/src/app/components/columns/columns.component.html
+++ b/src/app/components/columns/columns.component.html
@@ -7,57 +7,89 @@
     class="column-panel border border-dashed border-defaultborder rounded-md p-3 bg-white dark:bg-bodybg"
     *ngFor="let column of columnsField.columns; let c = index"
   >
+      <div class="column-dropzone border border-defaultborder rounded p-3 bg-bodybg2 dark:bg-bodybg"
+         cdkDropList
+         [id]="getColumnListId(column)"
+         [cdkDropListData]="column.fields"
+         [cdkDropListConnectedTo]="connectedTargetsFor(getColumnListId(column))"
+         (cdkDropListDropped)="onDropOnColumn(c, $event)">
 
-    <div
-      class="column-dropzone border border-defaultborder rounded p-3 bg-bodybg2 dark:bg-bodybg"
-      cdkDropList
-      [id]="getColumnListId(column)"
-      [cdkDropListData]="column.fields"
-      [cdkDropListConnectedTo]="getConnectedTargets(getColumnListId(column))"
-      (cdkDropListDropped)="onDropOnColumn(c, $event)"
-    >
+
       <div *ngIf="!column.fields.length" class="text-xs italic text-mutedtextcolor py-4 text-center">
         Drop fields for {{ column.title }} here
       </div>
 
-      <div class="flex justify-center mb-2">
-        <button
-          type="button"
-          class="btn btn-outline-primary btn-xs"
-          (click)="onAddSpreadsheet(c)"
-          title="Add Spreadsheet"
-        >
+      <!-- <div class="flex justify-center mb-2">
+        <button type="button" class="btn btn-outline-primary btn-xs" (click)="onAddSpreadsheet(c)">
           📊 Add Spreadsheet
         </button>
-      </div>
+      </div> -->
 
+      <!-- Inner fields -->
       <div
         *ngFor="let innerField of column.fields; let innerIndex = index"
         class="column-inner-field border border-defaultborder rounded-md p-2 mb-2 bg-white dark:bg-bodybg shadow-sm"
         cdkDrag
       >
-        <div class="inner-field-toolbar flex items-center justify-between mb-2">
-          <span class="text-[11px] uppercase tracking-wide text-defaulttextcolor">
-            {{ innerField.label }}
-          </span>
+        <!-- SIMPLE FIELDS: label + control(s) in one row -->
+        <div
+          *ngIf="innerField.type === 'text' || innerField.type === 'dropdown' || innerField.type === 'checkbox'; else complexBlock"
+          class="flex items-center gap-3"
+        >
+          <!-- Editable label -->
+          <input [(ngModel)]="innerField.label" type="text" class="form-input w-40" placeholder="Label" />
+
+          <!-- Control by type -->
+          <ng-container [ngSwitch]="innerField.type">
+            <!-- TEXT: value + key -->
+            <ng-container *ngSwitchCase="'text'">
+              <input [(ngModel)]="innerField.value" type="text" class="form-input flex-1" placeholder="Enter text" />
+              <input [(ngModel)]="innerField.key" type="text" class="form-input w-48" placeholder="Key" />
+            </ng-container>
+
+            <!-- DROPDOWN -->
+            <ng-container *ngSwitchCase="'dropdown'">
+              <select [(ngModel)]="innerField.value" class="form-select flex-1">
+                <option *ngFor="let opt of (innerField.options || [])" [ngValue]="opt">{{ opt }}</option>
+              </select>
+            </ng-container>
+
+            <!-- CHECKBOX -->
+            <ng-container *ngSwitchCase="'checkbox'">
+              <label class="inline-flex items-center gap-2">
+                <input [(ngModel)]="innerField.value" type="checkbox" class="form-checkbox" />
+                <span class="text-sm text-defaulttextcolor">Checked</span>
+              </label>
+            </ng-container>
+          </ng-container>
+
+          <!-- Remove button -->
           <button
             type="button"
             class="text-xs text-white bg-red-500 hover:bg-red-600 rounded-full w-5 h-5 flex items-center justify-center"
             (click)="onDeleteNestedField(c, innerIndex)"
+            title="Remove"
           >&times;</button>
         </div>
 
-        <ng-container [ngSwitch]="innerField.type">
-          <input *ngSwitchCase="'text'" type="text" placeholder="Enter text" class="form-input w-full" />
-          <select *ngSwitchCase="'dropdown'" class="form-select w-full">
-            <option *ngFor="let opt of innerField.options">{{ opt }}</option>
-          </select>
-          <div *ngSwitchCase="'checkbox'" class="flex items-center gap-2">
-            <input type="checkbox" class="form-checkbox" />
-            <span>Check me</span>
+        <!-- COMPLEX FIELDS (spreadsheet) full width, no label input -->
+        <ng-template #complexBlock>
+          <div class="w-full">
+            <ng-container [ngSwitch]="innerField.type">
+              <ng-container *ngSwitchCase="'handsontable'">
+                <div class="border rounded-md overflow-hidden w-full relative">
+                  <button
+                    type="button"
+                    class="absolute -top-2 -right-2 z-10 text-xs text-white bg-red-500 hover:bg-red-600 rounded-full w-5 h-5 flex items-center justify-center"
+                    (click)="onDeleteNestedField(c, innerIndex)"
+                    title="Remove"
+                  >&times;</button>
+                  <app-handsontable></app-handsontable>
+                </div>
+              </ng-container>
+            </ng-container>
           </div>
-          <app-handsontable *ngSwitchCase="'handsontable'"></app-handsontable>
-        </ng-container>
+        </ng-template>
       </div>
     </div>
   </div>
