--- a/src/app/components/tabs/tabs.component.html
+++ b/src/app/components/tabs/tabs.component.html
@@ -1,17 +1,15 @@
 <div class="tabs-wrapper space-y-4">
+  <!-- Tabs Header -->
   <div class="tabs-header flex flex-wrap items-center gap-2">
     <div
       class="tab-pill flex items-center gap-2"
       *ngFor="let tab of tabsField.tabs; let t = index"
       [class.active]="tabsField.activeTabIndex === t"
     >
-      <button
-        type="button"
-        class="tab-pill__btn"
-        (click)="onSetActiveTab(t)"
-      >
+      <button type="button" class="tab-pill__btn" (click)="onSetActiveTab(t)">
         {{ tab.title }}
       </button>
+
       <input
         *ngIf="tabsField.activeTabIndex === t"
         class="tab-pill__input form-input"
@@ -19,6 +17,7 @@
         (click)="$event.stopPropagation()"
         (input)="onUpdateTabTitle(t, $any($event.target).value)"
       />
+
       <button
         type="button"
         class="btn btn-outline-danger btn-xxs"
@@ -28,33 +27,29 @@
         ×
       </button>
     </div>
+
     <button class="btn btn-outline-primary btn-xs" type="button" (click)="onAddTab()">+ Add Tab</button>
   </div>
 
+  <!-- Active Tab Body -->
   <ng-container *ngIf="getActiveTab() as activeTab">
     <div
       class="tab-dropzone border border-defaultborder rounded p-3 bg-bodybg2 dark:bg-bodybg"
       cdkDropList
       [id]="getTabListId(activeTab)"
       [cdkDropListData]="activeTab.fields"
-      [cdkDropListConnectedTo]="getConnectedTargets(getTabListId(activeTab))"
+      [cdkDropListConnectedTo]="connectedTargetsFor(getTabListId(activeTab))"
       (cdkDropListDropped)="onDropOnTab(getActiveTabIndex(), $event)"
+        [cdkDropListEnterPredicate]="tabEnterPredicate" 
+
     >
       <div *ngIf="!activeTab.fields.length" class="text-xs italic text-mutedtextcolor py-4 text-center">
         Drop fields for {{ activeTab.title }} here
       </div>
 
-      <div class="flex justify-center mb-2">
-        <button
-          type="button"
-          class="btn btn-outline-primary btn-xs"
-          (click)="onAddSpreadsheet()"
-          title="Add Spreadsheet"
-        >
-          📊 Add Spreadsheet
-        </button>
-      </div>
+    
 
+      <!-- Render inner fields inside the active tab -->
       <div
         *ngFor="let innerField of activeTab.fields; let innerIndex = index"
         class="tab-inner-field border border-defaultborder rounded-md p-2 mb-2 bg-white dark:bg-bodybg shadow-sm"
@@ -68,22 +63,55 @@
             type="button"
             class="text-xs text-white bg-red-500 hover:bg-red-600 rounded-full w-5 h-5 flex items-center justify-center"
             (click)="onDeleteNestedField(getActiveTabIndex(), innerIndex)"
-          >&times;</button>
+          >
+            &times;
+          </button>
         </div>
 
         <ng-container [ngSwitch]="innerField.type">
-          <input *ngSwitchCase="'text'" type="text" placeholder="Enter text" class="form-input w-full" />
-          <select *ngSwitchCase="'dropdown'" class="form-select w-full">
-            <option *ngFor="let opt of innerField.options">{{ opt }}</option>
-          </select>
-          <div *ngSwitchCase="'checkbox'" class="flex items-center gap-2">
-            <input type="checkbox" class="form-checkbox" />
-            <span>Check me</span>
-          </div>
+          <!-- Simple types -->
+          <ng-container *ngSwitchCase="'text'">
+            <div class="flex items-center gap-3">
+              <input [(ngModel)]="innerField.label" type="text" class="form-input w-40" placeholder="Label" />
+              <input [(ngModel)]="innerField.value" type="text" class="form-input flex-1" placeholder="Enter text" />
+              <input [(ngModel)]="innerField.key" type="text" class="form-input w-48" placeholder="Key" />
+            </div>
+          </ng-container>
+
+          <ng-container *ngSwitchCase="'dropdown'">
+            <div class="flex items-center gap-3">
+              <input [(ngModel)]="innerField.label" type="text" class="form-input w-40" placeholder="Label" />
+              <select [(ngModel)]="innerField.value" class="form-select flex-1">
+                <option *ngFor="let opt of (innerField.options || [])" [ngValue]="opt">{{ opt }}</option>
+              </select>
+            </div>
+          </ng-container>
+
+          <ng-container *ngSwitchCase="'checkbox'">
+            <div class="flex items-center gap-3">
+              <input [(ngModel)]="innerField.label" type="text" class="form-input w-40" placeholder="Label" />
+              <label class="inline-flex items-center gap-2">
+                <input [(ngModel)]="innerField.value" type="checkbox" class="form-checkbox" />
+                <span class="text-sm text-defaulttextcolor">Checked</span>
+              </label>
+            </div>
+          </ng-container>
+
+          <!-- Spreadsheet -->
           <app-handsontable *ngSwitchCase="'handsontable'"></app-handsontable>
+
+          <!-- Columns (inside a tab) -->
+          <app-columns
+            *ngSwitchCase="'columns'"
+            [columnsField]="innerField"
+            [fieldIndex]="fieldIndex"
+            [connectedTargets]="connectedTargets"
+            (dropOnColumn)="onNestedColumnsDrop(innerField, $event)"
+            (deleteColumnField)="onNestedColumnsDelete(innerField, $event)"
+            (addSpreadsheet)="onNestedColumnsAddSheet(innerField, $event)"
+          ></app-columns>
         </ng-container>
       </div>
     </div>
   </ng-container>
 </div>
-
