--- a/src/app/components/form-structure/handsontable/handsontable-grid/grid.component.html
+++ b/src/app/components/form-structure/handsontable/handsontable-grid/grid.component.html
@@ -1,1 +1,1 @@
-<hot-table *ngIf="isBrowser" [data]="data" [settings]="gridSettings" [hotId]="hotId"></hot-table>
+<hot-table *ngIf="isBrowser" [id]="hotId" [data]="data" [settings]="gridSettings" [hotId]="hotId"></hot-table>
